# triple-shoot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.MD  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml  image-health.yml  itch.yml
assets/prefab/: bullet.json  deployer.json  heavy.json  light.json  player.json  rifle_bullet.json  shotgun_bullet.json  shotgun_pickup.json  test.json  test_bullet.json  test_dummy.json  test_wall.json  wall_horiz.json  wall_vert.json
assets/prefab/enemy/: follower.json  pouncer.json
assets/prefab/spawns/: light_spawn.json  shotgun_pickup_spawn.json
assets/prefab/test/: bullet.json  cellspawn.json  dumemy.json  dummy.json  dumspawn.json  globalspawn.json  pick.json  spawner_a.json  spawner_b.json  test.json  wall.json
dbg_scripts/: bullet_test.txt  hit_test.txt  load_mains.txt  load_tests.txt  maingame.txt
dbg_scripts/test/: chaser.txt  lightswarm.txt  spawner.txt  swarm.txt  wall.txt
lib-asset/: Cargo.toml
lib-asset/src/: asset_roots.rs  containers.rs  lib.rs  manager.rs  prefab.rs
lib-asset/tests/: different_origin.rs
lib-col/: Cargo.toml
lib-col/src/: aabb.rs  conv.rs  group.rs  lib.rs  shape.rs
lib-col/tests/: aabb_casts.rs  aabb_overlaps.rs  aabb_raycasts.rs  collider_group.rs  shape_casts.rs  simple_intersections.rs  world.rs
lib-col/tests/common/: mod.rs
lib-game/: Cargo.toml
lib-game/src/: common_systems.rs  components.rs  hp.rs  input.rs  lib.rs  lifetime.rs  prefab.rs  prelude.rs  projectile.rs  resolution.rs  state.rs  ui.rs
lib-game/src/collisions/: components.rs  debug.rs  mod.rs
lib-game/src/dbg/: cmd.rs  mod.rs  screendump.rs
lib-game/src/render/: components.rs  mod.rs
lib-game/src/render/shaders/: pixel_perfect.frag  pixel_perfect.vert  spinn.frag  spinn.vert
src/: components.rs  main.rs  main_game.rs  prelude.rs  win.rs
src/main_game/: ai.rs  player.rs  spawning.rs  spawning_cfg.rs
static/: index.html
