[package]
name = "quad-jam-2024"
version = "0.26.0"
edition = "2024"

[workspace]
members = [ "lib-asset", "lib-col", "lib-game" ]

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Internal deps
lib-col = { path = "./lib-col"}
lib-game = { path = "./lib-game" }
lib-asset = { path = "./lib-asset" }

[features]
dbg = ["lib-game/dbg"]
dev-env = ["lib-game/dev-env", "dep:clap"]

[workspace.dependencies]
image = { version = "0.25", features = ["png"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
hecs = { version = "0.10.5", features = ["macros"] }
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
anyhow = "1"
hashbrown = "0.14.5"
glam = { version = "0.30", features = ["serde"] }
# The fork of miniquad
mimiq = { git = "https://github.com/InnocentusLime/miniquad", tag = "v0.4.3" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."lib-col"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true
panic = "abort"
