[package]
name = "lib-asset"
version = "0.14.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
mimiq = { workspace = true }
lib-col = { path = "../lib-col" }
hecs = { workspace = true }
slab = "0.4"
tracing = { version = "0.1.44", features = ["attributes"] }

[features]
dbg = []
dev-env = ["dbg"]

[dev-dependencies]
tracing-subscriber = "0.3"
