[package]
name = "lib-game"
version = "0.22.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
hecs = { workspace = true }
mimiq = { workspace = true }
hashbrown = { workspace = true }
lib-col = { path = "../lib-col" }
lib-asset = { path = "../lib-asset" }

[features]
dbg = [ "mimiq/egui", "lib-col/dbg", "lib-asset/dbg"]
dev-env = ["dbg", "lib-asset/dev-env"]

[dev-dependencies]
rand = "0.9.1"